@@ -1,3 +1,4 @@
+	* try harder to bind the udp socket (uTP, DHT, UDP-trackers, LSD) to the same port as TCP
 	* relax file timestamp requirements for accepting resume data
 	* fix performance issue in web seed downloader (coalescing of blocks sometimes wouldn't work)
 	* web seed fixes (better support for torrents without trailing / in web seeds)
